[gd_scene load_steps=5 format=3 uid="uid://bw8h8rfm67dud"]

[ext_resource type="Script" path="res://DiceTrayData/dice_preferences.gd" id="1_15tm0"]

[sub_resource type="Theme" id="Theme_1glhj"]

[sub_resource type="Theme" id="Theme_oddly"]
default_font_size = 40
PopupMenu/font_sizes/font_size = 60

[sub_resource type="Theme" id="Theme_jf8ki"]

[node name="DiceStyleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15tm0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -410.5
offset_right = 207.5
offset_bottom = 410.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="XDim" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Room X"

[node name="d_style_x" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2

[node name="YDim" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Room Y"

[node name="d_style_y" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 2
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2

[node name="DoublePrimary" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Primary D66"

[node name="d_style_d66_prime" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 0
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="DoubleSecondary" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "2ndary D66"

[node name="d_style_d66_secondary" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 0
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="SinglePrimary" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Primary D6"

[node name="d_style_single_primary" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="SingleSecondary" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "2ndary D6"

[node name="d_style_single_secondary" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="ExitNum" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "# of Exits"

[node name="d_style_exit_qty" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="ExitDirection" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Exit Direction"

[node name="d_style_exit_direction" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 2
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Letters"
popup/item_2/id = 2

[node name="ExitLock" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Exit Lock"

[node name="d_style_exit_lock" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="D3Die" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "D3"

[node name="d_style_d3" type="OptionButton" parent="MarginContainer/GridContainer" groups=["DiceStyleSelection"]]
layout_mode = 2
theme = SubResource("Theme_oddly")
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Numbers"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Dots"
popup/item_1/id = 1
popup/item_2/text = "Letters"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="LoadDefault" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_jf8ki")
theme_override_font_sizes/font_size = 40
text = "Load Default"

[node name="Spacer" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2

[node name="SaveStyles" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Save Current"

[node name="Back" type="Button" parent="MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 40
text = "Back"

[connection signal="ready" from="." to="." method="_on_ready_set_style_popups"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_x" to="." method="_on_option_button_x_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_y" to="." method="_on_option_button_y_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_d66_prime" to="." method="_on_option_button_d_66_primary_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_d66_secondary" to="." method="_on_option_button_d_66_secondary_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_single_primary" to="." method="_on_option_button_single_primary_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_single_secondary" to="." method="_on_option_button_single_secondary_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_exit_qty" to="." method="_on_option_button_exit_qty_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_exit_direction" to="." method="_on_option_button_exit_direction_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_exit_lock" to="." method="_on_option_button_lock_item_selected"]
[connection signal="item_selected" from="MarginContainer/GridContainer/d_style_d3" to="." method="_on_option_button_d_3_item_selected"]
[connection signal="pressed" from="MarginContainer/GridContainer/LoadDefault" to="." method="_on_load_default_styles_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/SaveStyles" to="." method="_save_dice_preferences"]
[connection signal="pressed" from="MarginContainer/GridContainer/Back" to="." method="_on_back_pressed"]
